Application completed, styling and documentation finished

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <ul class = "wrapper">
   </ul>
 
-  <!-- The javascript file that gives the application its functionality -->
+  <!-- The javascript file that gives the application its functionality needed -->
   <script src="script.js"></script>
 </body>
 
